--- a/Frogger.vcxproj
+++ b/Frogger.vcxproj
@@ -19,9 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Frogger\Log.cpp" />
+    <ClCompile Include="src\Frogger\PurpleCar.cpp" />
+    <ClCompile Include="src\Frogger\Levels\LevelOne.cpp" />
+    <ClCompile Include="src\Frogger\Levels\LevelManager.cpp" />
     <ClCompile Include="src\Frogger\FroggerEntrance.cpp" />
     <ClCompile Include="src\Frogger\Frog.cpp" />
-    <ClCompile Include="src\Frogger\FroggerEntity.cpp" />
     <ClCompile Include="src\States\PlayState.cpp" />
     <ClCompile Include="src\States\SplashMenu.cpp" />
     <ClCompile Include="src\AnimatedTexture2D.cpp" />
@@ -39,11 +42,20 @@
     <ClCompile Include="src\Texture2D.cpp" />
     <ClCompile Include="src\LevelEditor.cpp" />
     <ClCompile Include="src\TimerModule.cpp" />
+    <ClCompile Include="src\Frogger\YellowCar.cpp" />
+    <ClCompile Include="src\Frogger\Tractor.cpp" />
+    <ClCompile Include="src\Frogger\WhiteCar.cpp" />
+    <ClCompile Include="src\Frogger\Truck.cpp" />
+    <ClCompile Include="src\Frogger\Turtle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Frogger\Log.h" />
+    <ClInclude Include="src\Frogger\PurpleCar.h" />
+    <ClInclude Include="src\Frogger\Levels\LevelOne.h" />
+    <ClInclude Include="src\Frogger\Levels\LevelManager.h" />
     <ClInclude Include="src\Frogger\FroggerEntrance.h" />
     <ClInclude Include="src\Frogger\Frog.h" />
-    <ClInclude Include="src\Frogger\FroggerEntity.h" />
+    <ClInclude Include="src\Frogger\Levels\Level.h" />
     <ClInclude Include="src\States\PlayState.h" />
     <ClInclude Include="src\States\SplashMenu.h" />
     <ClInclude Include="src\AnimatedTexture2D.h" />
@@ -62,6 +74,11 @@
     <ClInclude Include="src\Texture2D.h" />
     <ClInclude Include="src\LevelEditor.h" />
     <ClInclude Include="src\TimerModule.h" />
+    <ClInclude Include="src\Frogger\YellowCar.h" />
+    <ClInclude Include="src\Frogger\Tractor.h" />
+    <ClInclude Include="src\Frogger\WhiteCar.h" />
+    <ClInclude Include="src\Frogger\Truck.h" />
+    <ClInclude Include="src\Frogger\Turtle.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
